Lib/Parser/SharpExpressionsParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 3.5.0.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// $ANTLR 3.5.0.2 C:\\workspace\\SharpExpressions\\Lib\\\\Parser\\SharpExpressions.g 2015-07-07 09:27:40

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 219
// Unreachable code detected.
#pragma warning disable 162
// Missing XML comment for publicly visible type or member 'Type_or_Member'
#pragma warning disable 1591
// CLS compliance checking will not be performed on 'type' because it is not visible from outside this assembly.
#pragma warning disable 3019


using System.Collections.Generic;
using Antlr.Runtime;
using Antlr.Runtime.Misc;

namespace SharpExpressions.Parser
{
[System.CodeDom.Compiler.GeneratedCode("ANTLR", "3.5.0.2")]
[System.CLSCompliant(false)]
public partial class SharpExpressionsParser : Antlr.Runtime.Parser
{
	internal static readonly string[] tokenNames = new string[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "IDENTIFIER", "QUOTED_STRING", "REAL", "WS", "'!'", "'!='", "'&&'", "'('", "')'", "'*'", "'+'", "','", "'-'", "'.'", "'/'", "':'", "'<'", "'<='", "'=='", "'>'", "'>='", "'?'", "'['", "']'", "'^'", "'false'", "'true'", "'||'"
	};
	public const int EOF=-1;
	public const int IDENTIFIER=4;
	public const int QUOTED_STRING=5;
	public const int REAL=6;
	public const int WS=7;
	public const int T__8=8;
	public const int T__9=9;
	public const int T__10=10;
	public const int T__11=11;
	public const int T__12=12;
	public const int T__13=13;
	public const int T__14=14;
	public const int T__15=15;
	public const int T__16=16;
	public const int T__17=17;
	public const int T__18=18;
	public const int T__19=19;
	public const int T__20=20;
	public const int T__21=21;
	public const int T__22=22;
	public const int T__23=23;
	public const int T__24=24;
	public const int T__25=25;
	public const int T__26=26;
	public const int T__27=27;
	public const int T__28=28;
	public const int T__29=29;
	public const int T__30=30;
	public const int T__31=31;

	public SharpExpressionsParser(ITokenStream input)
		: this(input, new RecognizerSharedState())
	{
	}
	public SharpExpressionsParser(ITokenStream input, RecognizerSharedState state)
		: base(input, state)
	{
		OnCreated();
	}

	public override string[] TokenNames { get { return SharpExpressionsParser.tokenNames; } }
	public override string GrammarFileName { get { return "C:\\workspace\\SharpExpressions\\Lib\\\\Parser\\SharpExpressions.g"; } }


	partial void OnCreated();
	partial void EnterRule(string ruleName, int ruleIndex);
	partial void LeaveRule(string ruleName, int ruleIndex);

	#region Rules
	partial void EnterRule_eval();
	partial void LeaveRule_eval();
	// $ANTLR start "eval"
	// C:\\workspace\\SharpExpressions\\Lib\\\\Parser\\SharpExpressions.g:29:8: public eval returns [Queue queue] :Q= expression ;
	[GrammarRule("eval")]
	public Queue eval()
	{
		EnterRule_eval();
		EnterRule("eval", 1);
		TraceIn("eval", 1);
		Queue queue = default(Queue);


		Queue Q = default(Queue);

		try { DebugEnterRule(GrammarFileName, "eval");
		DebugLocation(29, 2);
		try
		{
			// C:\\workspace\\SharpExpressions\\Lib\\\\Parser\\SharpExpressions.g:30:3: (Q= expression )
			DebugEnterAlt(1);
			// C:\\workspace\\SharpExpressions\\Lib\\\\Parser\\SharpExpressions.g:30:5: Q= expression
			{
			DebugLocation(30, 5);
			 allocate_queues(5); 
			DebugLocation(30, 30);
			PushFollow(Follow._expression_in_eval71);
			Q=expression();
			PopFollow();

			DebugLocation(30, 42);
			 queue=Q; 

			}

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		}
		finally
		{
			TraceOut("eval", 1);
			LeaveRule("eval", 1);
			LeaveRule_eval();
		}
		DebugLocation(31, 2);
		} finally { DebugExitRule(GrammarFileName, "eval"); }
		return queue;

	}
	// $ANTLR end "eval"

	partial void EnterRule_expression();
	partial void LeaveRule_expression();
	// $ANTLR start "expression"
	// C:\\workspace\\SharpExpressions\\Lib\\\\Parser\\SharpExpressions.g:33:1: expression returns [Queue ret] : Q= boolean_expression (Q2= ternary_operator )? ;
	[GrammarRule("expression")]
	private Queue expression()
	{
		EnterRule_expression();
		EnterRule("expression", 2);
		TraceIn("expression", 2);
		Queue ret = default(Queue);


		Queue Q = default(Queue);
		Queue Q2 = default(Queue);

		try { DebugEnterRule(GrammarFileName, "expression");
		DebugLocation(33, 2);
		try
		{
			// C:\\workspace\\SharpExpressions\\Lib\\\\Parser\\SharpExpressions.g:34:3: (Q= boolean_expression (Q2= ternary_operator )? )
			DebugEnterAlt(1);
			// C:\\workspace\\SharpExpressions\\Lib\\\\Parser\\SharpExpressions.g:34:5: Q= boolean_expression (Q2= ternary_operator )?
			{
			DebugLocation(34, 6);
			PushFollow(Follow._boolean_expression_in_expression92);
			Q=boolean_expression();
			PopFollow();

			DebugLocation(34, 26);
			 ret = Q; 
			DebugLocation(34, 44);
			// C:\\workspace\\SharpExpressions\\Lib\\\\Parser\\SharpExpressions.g:34:44: (Q2= ternary_operator )?
			int alt1=2;
			try { DebugEnterSubRule(1);
			try { DebugEnterDecision(1, false);
			int LA1_1 = input.LA(1);

			if ((LA1_1==25))
			{
				alt1 = 1;
			}
			} finally { DebugExitDecision(1); }
			switch (alt1)
			{
			case 1:
				DebugEnterAlt(1);
				// C:\\workspace\\SharpExpressions\\Lib\\\\Parser\\SharpExpressions.g:34:45: Q2= ternary_operator
				{
				DebugLocation(34, 47);
				PushFollow(Follow._ternary_operator_in_expression99);
				Q2=ternary_operator();
				PopFollow();

				DebugLocation(34, 65);
				 ret=push_operation(Q2, Operator.Ternary, ret); 

				}
				break;

			}
			} finally { DebugExitSubRule(1); }


			}

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		}
		finally
		{
			TraceOut("expression", 2);
			LeaveRule("expression", 2);
			LeaveRule_expression();
		}
		DebugLocation(35, 2);
		} finally { DebugExitRule(GrammarFileName, "expression"); }
		return ret;

	}
	// $ANTLR end "expression"

	partial void EnterRule_boolean_expression();
	partial void LeaveRule_boolean_expression();
	// $ANTLR start "boolean_expression"
	// C:\\workspace\\SharpExpressions\\Lib\\\\Parser\\SharpExpressions.g:37:1: boolean_expression returns [Queue ret] : Q1= comparison ( '&&' Q2= comparison | '||' Q2= comparison )* ;
	[GrammarRule("boolean_expression")]
	private Queue boolean_expression()
	{
		EnterRule_boolean_expression();
		EnterRule("boolean_expression", 3);
		TraceIn("boolean_expression", 3);
		Queue ret = default(Queue);


		Queue Q1 = default(Queue);
		Queue Q2 = default(Queue);

		try { DebugEnterRule(GrammarFileName, "boolean_expression");
		DebugLocation(37, 2);
		try
		{
			// C:\\workspace\\SharpExpressions\\Lib\\\\Parser\\SharpExpressions.g:38:3: (Q1= comparison ( '&&' Q2= comparison | '||' Q2= comparison )* )
			DebugEnterAlt(1);
			// C:\\workspace\\SharpExpressions\\Lib\\\\Parser\\SharpExpressions.g:38:5: Q1= comparison ( '&&' Q2= comparison | '||' Q2= comparison )*
			{
			DebugLocation(38, 7);
			PushFollow(Follow._comparison_in_boolean_expression122);
			Q1=comparison();
			PopFollow();

			DebugLocation(38, 19);
			 ret=Q1; 
			DebugLocation(39, 5);
			// C:\\workspace\\SharpExpressions\\Lib\\\\Parser\\SharpExpressions.g:39:5: ( '&&' Q2= comparison | '||' Q2= comparison )*
			try { DebugEnterSubRule(2);
			while (true)
			{
				int alt2=3;
				try { DebugEnterDecision(2, false);
				int LA2_1 = input.LA(1);

				if ((LA2_1==10))
				{
					alt2 = 1;
				}
				else if ((LA2_1==31))
				{
					alt2 = 2;
				}


				} finally { DebugExitDecision(2); }
				switch ( alt2 )
				{
				case 1:
					DebugEnterAlt(1);
					// C:\\workspace\\SharpExpressions\\Lib\\\\Parser\\SharpExpressions.g:39:7: '&&' Q2= comparison
					{
					DebugLocation(39, 7);
					Match(input,10,Follow._10_in_boolean_expression132); 
					DebugLocation(39, 14);
					PushFollow(Follow._comparison_in_boolean_expression136);
					Q2=comparison();
					PopFollow();

					DebugLocation(39, 26);
					 ret=push_operation(ret, Operator.And, Q2); 

					}
					break;
				case 2:
					DebugEnterAlt(2);
					// C:\\workspace\\SharpExpressions\\Lib\\\\Parser\\SharpExpressions.g:40:4: '||' Q2= comparison
					{
					DebugLocation(40, 4);
					Match(input,31,Follow._31_in_boolean_expression143); 
					DebugLocation(40, 11);
					PushFollow(Follow._comparison_in_boolean_expression147);
					Q2=comparison();
					PopFollow();

					DebugLocation(40, 23);
					 ret=push_operation(ret, Operator.Or,  Q2); 

					}
					break;

				default:
					goto loop2;
				}
			}

			loop2:
				;

			} finally { DebugExitSubRule(2); }


			}

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		}
		finally
		{
			TraceOut("boolean_expression", 3);
			LeaveRule("boolean_expression", 3);
			LeaveRule_boolean_expression();
		}
		DebugLocation(41, 2);
		} finally { DebugExitRule(GrammarFileName, "boolean_expression"); }
		return ret;

	}
	// $ANTLR end "boolean_expression"

	partial void EnterRule_comparison();
	partial void LeaveRule_comparison();
	// $ANTLR start "comparison"
	// C:\\workspace\\SharpExpressions\\Lib\\\\Parser\\SharpExpressions.g:43:1: comparison returns [Queue ret] : Q1= addition_expression ( '>=' Q2= addition_expression | '>' Q2= addition_expression | '<=' Q2= addition_expression | '<' Q2= addition_expression | '==' Q2= addition_expression | '!=' Q2= addition_expression )* ;
	[GrammarRule("comparison")]
	private Queue comparison()
	{
		EnterRule_comparison();
		EnterRule("comparison", 4);
		TraceIn("comparison", 4);
		Queue ret = default(Queue);


		Queue Q1 = default(Queue);
		Queue Q2 = default(Queue);

		try { DebugEnterRule(GrammarFileName, "comparison");
		DebugLocation(43, 2);
		try
		{
			// C:\\workspace\\SharpExpressions\\Lib\\\\Parser\\SharpExpressions.g:44:3: (Q1= addition_expression ( '>=' Q2= addition_expression | '>' Q2= addition_expression | '<=' Q2= addition_expression | '<' Q2= addition_expression | '==' Q2= addition_expression | '!=' Q2= addition_expression )* )
			DebugEnterAlt(1);
			// C:\\workspace\\SharpExpressions\\Lib\\\\Parser\\SharpExpressions.g:44:5: Q1= addition_expression ( '>=' Q2= addition_expression | '>' Q2= addition_expression | '<=' Q2= addition_expression | '<' Q2= addition_expression | '==' Q2= addition_expression | '!=' Q2= addition_expression )*
			{
			DebugLocation(44, 7);
			PushFollow(Follow._addition_expression_in_comparison170);
			Q1=addition_expression();
			PopFollow();

			DebugLocation(44, 28);
			 ret=Q1; 
			DebugLocation(45, 5);
			// C:\\workspace\\SharpExpressions\\Lib\\\\Parser\\SharpExpressions.g:45:5: ( '>=' Q2= addition_expression | '>' Q2= addition_expression | '<=' Q2= addition_expression | '<' Q2= addition_expression | '==' Q2= addition_expression | '!=' Q2= addition_expression )*
			try { DebugEnterSubRule(3);
			while (true)
			{
				int alt3=7;
				try { DebugEnterDecision(3, false);
				switch (input.LA(1))
				{
				case 24:
					{
					alt3 = 1;
					}
					break;
				case 23:
					{
					alt3 = 2;
					}
					break;
				case 21:
					{
					alt3 = 3;
					}
					break;
				case 20:
					{
					alt3 = 4;
					}
					break;
				case 22:
					{
					alt3 = 5;
					}
					break;
				case 9:
					{
					alt3 = 6;
					}
					break;
				}

				} finally { DebugExitDecision(3); }
				switch ( alt3 )
				{
				case 1:
					DebugEnterAlt(1);
					// C:\\workspace\\SharpExpressions\\Lib\\\\Parser\\SharpExpressions.g:45:7: '>=' Q2= addition_expression
					{
					DebugLocation(45, 7);
					Match(input,24,Follow._24_in_comparison180); 
					DebugLocation(45, 14);
					PushFollow(Follow._addition_expression_in_comparison184);
					Q2=addition_expression();
					PopFollow();

					DebugLocation(45, 35);
					 ret=push_operation(ret, Operator.GreaterOrEqual, Q2); 

					}
					break;
				case 2:
					DebugEnterAlt(2);
					// C:\\workspace\\SharpExpressions\\Lib\\\\Parser\\SharpExpressions.g:46:4: '>' Q2= addition_expression
					{
					DebugLocation(46, 4);
					Match(input,23,Follow._23_in_comparison191); 
					DebugLocation(46, 11);
					PushFollow(Follow._addition_expression_in_comparison196);
					Q2=addition_expression();
					PopFollow();

					DebugLocation(46, 32);
					 ret=push_operation(ret, Operator.GreaterThan, Q2); 

					}
					break;
				case 3:
					DebugEnterAlt(3);
					// C:\\workspace\\SharpExpressions\\Lib\\\\Parser\\SharpExpressions.g:47:4: '<=' Q2= addition_expression
					{
					DebugLocation(47, 4);
					Match(input,21,Follow._21_in_comparison203); 
					DebugLocation(47, 11);
					PushFollow(Follow._addition_expression_in_comparison207);
					Q2=addition_expression();
					PopFollow();

					DebugLocation(47, 32);
					 ret=push_operation(ret, Operator.LessOrEqual, Q2); 

					}
					break;
				case 4:
					DebugEnterAlt(4);
					// C:\\workspace\\SharpExpressions\\Lib\\\\Parser\\SharpExpressions.g:48:4: '<' Q2= addition_expression
					{
					DebugLocation(48, 4);
					Match(input,20,Follow._20_in_comparison214); 
					DebugLocation(48, 11);
					PushFollow(Follow._addition_expression_in_comparison219);
					Q2=addition_expression();
					PopFollow();

					DebugLocation(48, 32);
					 ret=push_operation(ret, Operator.LessThan, Q2); 

					}
					break;
				case 5:
					DebugEnterAlt(5);
					// C:\\workspace\\SharpExpressions\\Lib\\\\Parser\\SharpExpressions.g:49:4: '==' Q2= addition_expression
					{
					DebugLocation(49, 4);
					Match(input,22,Follow._22_in_comparison226); 
					DebugLocation(49, 11);
					PushFollow(Follow._addition_expression_in_comparison230);
					Q2=addition_expression();
					PopFollow();

					DebugLocation(49, 32);
					 ret=push_operation(ret, Operator.Equals, Q2); 

					}
					break;
				case 6:
					DebugEnterAlt(6);
					// C:\\workspace\\SharpExpressions\\Lib\\\\Parser\\SharpExpressions.g:50:4: '!=' Q2= addition_expression
					{
					DebugLocation(50, 4);
					Match(input,9,Follow._9_in_comparison237); 
					DebugLocation(50, 11);
					PushFollow(Follow._addition_expression_in_comparison241);
					Q2=addition_expression();
					PopFollow();

					DebugLocation(50, 32);
					 ret=push_operation(ret, Operator.NotEquals, Q2); 

					}
					break;

				default:
					goto loop3;
				}
			}

			loop3:
				;

			} finally { DebugExitSubRule(3); }


			}

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		}
		finally
		{
			TraceOut("comparison", 4);
			LeaveRule("comparison", 4);
			LeaveRule_comparison();
		}
		DebugLocation(51, 2);
		} finally { DebugExitRule(GrammarFileName, "comparison"); }
		return ret;

	}
	// $ANTLR end "comparison"

	partial void EnterRule_addition_expression();
	partial void LeaveRule_addition_expression();
	// $ANTLR start "addition_expression"
	// C:\\workspace\\SharpExpressions\\Lib\\\\Parser\\SharpExpressions.g:53:1: addition_expression returns [Queue ret] : Q1= multiply_expression ( '+' Q2= multiply_expression | '-' Q2= multiply_expression )* ;
	[GrammarRule("addition_expression")]
	private Queue addition_expression()
	{
		EnterRule_addition_expression();
		EnterRule("addition_expression", 5);
		TraceIn("addition_expression", 5);
		Queue ret = default(Queue);


		Queue Q1 = default(Queue);
		Queue Q2 = default(Queue);

		try { DebugEnterRule(GrammarFileName, "addition_expression");
		DebugLocation(53, 2);
		try
		{
			// C:\\workspace\\SharpExpressions\\Lib\\\\Parser\\SharpExpressions.g:54:3: (Q1= multiply_expression ( '+' Q2= multiply_expression | '-' Q2= multiply_expression )* )
			DebugEnterAlt(1);
			// C:\\workspace\\SharpExpressions\\Lib\\\\Parser\\SharpExpressions.g:54:5: Q1= multiply_expression ( '+' Q2= multiply_expression | '-' Q2= multiply_expression )*
			{
			DebugLocation(54, 7);
			PushFollow(Follow._multiply_expression_in_addition_expression264);
			Q1=multiply_expression();
			PopFollow();

			DebugLocation(54, 28);
			 ret=Q1; 
			DebugLocation(55, 5);
			// C:\\workspace\\SharpExpressions\\Lib\\\\Parser\\SharpExpressions.g:55:5: ( '+' Q2= multiply_expression | '-' Q2= multiply_expression )*
			try { DebugEnterSubRule(4);
			while (true)
			{
				int alt4=3;
				try { DebugEnterDecision(4, false);
				int LA4_1 = input.LA(1);

				if ((LA4_1==14))
				{
					alt4 = 1;
				}
				else if ((LA4_1==16))
				{
					alt4 = 2;
				}


				} finally { DebugExitDecision(4); }
				switch ( alt4 )
				{
				case 1:
					DebugEnterAlt(1);
					// C:\\workspace\\SharpExpressions\\Lib\\\\Parser\\SharpExpressions.g:55:7: '+' Q2= multiply_expression
					{
					DebugLocation(55, 7);
					Match(input,14,Follow._14_in_addition_expression274); 
					DebugLocation(55, 13);
					PushFollow(Follow._multiply_expression_in_addition_expression278);
					Q2=multiply_expression();
					PopFollow();

					DebugLocation(55, 34);
					 ret=push_operation(ret, Operator.Add, Q2); 

					}
					break;
				case 2:
					DebugEnterAlt(2);
					// C:\\workspace\\SharpExpressions\\Lib\\\\Parser\\SharpExpressions.g:56:4: '-' Q2= multiply_expression
					{
					DebugLocation(56, 4);
					Match(input,16,Follow._16_in_addition_expression285); 
					DebugLocation(56, 10);
					PushFollow(Follow._multiply_expression_in_addition_expression289);
					Q2=multiply_expression();
					PopFollow();

					DebugLocation(56, 31);
					 ret=push_operation(ret, Operator.Sub, Q2); 

					}
					break;

				default:
					goto loop4;
				}
			}

			loop4:
				;

			} finally { DebugExitSubRule(4); }


			}

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		}
		finally
		{
			TraceOut("addition_expression", 5);
			LeaveRule("addition_expression", 5);
			LeaveRule_addition_expression();
		}
		DebugLocation(57, 2);
		} finally { DebugExitRule(GrammarFileName, "addition_expression"); }
		return ret;

	}
	// $ANTLR end "addition_expression"

	partial void EnterRule_multiply_expression();
	partial void LeaveRule_multiply_expression();
	// $ANTLR start "multiply_expression"
	// C:\\workspace\\SharpExpressions\\Lib\\\\Parser\\SharpExpressions.g:59:1: multiply_expression returns [Queue ret] : Q1= power_expression ( '*' Q2= power_expression | '/' Q2= power_expression )* ;
	[GrammarRule("multiply_expression")]
	private Queue multiply_expression()
	{
		EnterRule_multiply_expression();
		EnterRule("multiply_expression", 6);
		TraceIn("multiply_expression", 6);
		Queue ret = default(Queue);


		Queue Q1 = default(Queue);
		Queue Q2 = default(Queue);

		try { DebugEnterRule(GrammarFileName, "multiply_expression");
		DebugLocation(59, 2);
		try
		{
			// C:\\workspace\\SharpExpressions\\Lib\\\\Parser\\SharpExpressions.g:60:3: (Q1= power_expression ( '*' Q2= power_expression | '/' Q2= power_expression )* )
			DebugEnterAlt(1);
			// C:\\workspace\\SharpExpressions\\Lib\\\\Parser\\SharpExpressions.g:60:5: Q1= power_expression ( '*' Q2= power_expression | '/' Q2= power_expression )*
			{
			DebugLocation(60, 7);
			PushFollow(Follow._power_expression_in_multiply_expression312);
			Q1=power_expression();
			PopFollow();

			DebugLocation(60, 25);
			 ret=Q1; 
			DebugLocation(61, 5);
			// C:\\workspace\\SharpExpressions\\Lib\\\\Parser\\SharpExpressions.g:61:5: ( '*' Q2= power_expression | '/' Q2= power_expression )*
			try { DebugEnterSubRule(5);
			while (true)
			{
				int alt5=3;
				try { DebugEnterDecision(5, false);
				int LA5_1 = input.LA(1);

				if ((LA5_1==13))
				{
					alt5 = 1;
				}
				else if ((LA5_1==18))
				{
					alt5 = 2;
				}


				} finally { DebugExitDecision(5); }
				switch ( alt5 )
				{
				case 1:
					DebugEnterAlt(1);
					// C:\\workspace\\SharpExpressions\\Lib\\\\Parser\\SharpExpressions.g:61:7: '*' Q2= power_expression
					{
					DebugLocation(61, 7);
					Match(input,13,Follow._13_in_multiply_expression322); 
					DebugLocation(61, 13);
					PushFollow(Follow._power_expression_in_multiply_expression326);
					Q2=power_expression();
					PopFollow();

					DebugLocation(61, 31);
					 ret=push_operation(ret, Operator.Mul, Q2); 

					}
					break;
				case 2:
					DebugEnterAlt(2);
					// C:\\workspace\\SharpExpressions\\Lib\\\\Parser\\SharpExpressions.g:62:4: '/' Q2= power_expression
					{
					DebugLocation(62, 4);
					Match(input,18,Follow._18_in_multiply_expression333); 
					DebugLocation(62, 10);
					PushFollow(Follow._power_expression_in_multiply_expression337);
					Q2=power_expression();
					PopFollow();

					DebugLocation(62, 28);
					 ret=push_operation(ret, Operator.Div, Q2); 

					}
					break;

				default:
					goto loop5;
				}
			}

			loop5:
				;

			} finally { DebugExitSubRule(5); }


			}

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		}
		finally
		{
			TraceOut("multiply_expression", 6);
			LeaveRule("multiply_expression", 6);
			LeaveRule_multiply_expression();
		}
		DebugLocation(63, 2);
		} finally { DebugExitRule(GrammarFileName, "multiply_expression"); }
		return ret;

	}
	// $ANTLR end "multiply_expression"

	partial void EnterRule_power_expression();
	partial void LeaveRule_power_expression();
	// $ANTLR start "power_expression"
	// C:\\workspace\\SharpExpressions\\Lib\\\\Parser\\SharpExpressions.g:65:1: power_expression returns [Queue ret] : Q1= negation ( '^' Q2= negation )* ;
	[GrammarRule("power_expression")]
	private Queue power_expression()
	{
		EnterRule_power_expression();
		EnterRule("power_expression", 7);
		TraceIn("power_expression", 7);
		Queue ret = default(Queue);


		Queue Q1 = default(Queue);
		Queue Q2 = default(Queue);

		try { DebugEnterRule(GrammarFileName, "power_expression");
		DebugLocation(65, 2);
		try
		{
			// C:\\workspace\\SharpExpressions\\Lib\\\\Parser\\SharpExpressions.g:66:3: (Q1= negation ( '^' Q2= negation )* )
			DebugEnterAlt(1);
			// C:\\workspace\\SharpExpressions\\Lib\\\\Parser\\SharpExpressions.g:66:5: Q1= negation ( '^' Q2= negation )*
			{
			DebugLocation(66, 7);
			PushFollow(Follow._negation_in_power_expression360);
			Q1=negation();
			PopFollow();

			DebugLocation(66, 17);
			 ret=Q1; 
			DebugLocation(67, 5);
			// C:\\workspace\\SharpExpressions\\Lib\\\\Parser\\SharpExpressions.g:67:5: ( '^' Q2= negation )*
			try { DebugEnterSubRule(6);
			while (true)
			{
				int alt6=2;
				try { DebugEnterDecision(6, false);
				int LA6_1 = input.LA(1);

				if ((LA6_1==28))
				{
					alt6 = 1;
				}


				} finally { DebugExitDecision(6); }
				switch ( alt6 )
				{
				case 1:
					DebugEnterAlt(1);
					// C:\\workspace\\SharpExpressions\\Lib\\\\Parser\\SharpExpressions.g:67:7: '^' Q2= negation
					{
					DebugLocation(67, 7);
					Match(input,28,Follow._28_in_power_expression370); 
					DebugLocation(67, 13);
					PushFollow(Follow._negation_in_power_expression374);
					Q2=negation();
					PopFollow();

					DebugLocation(67, 23);
					 ret=push_operation(ret, Operator.Pow, Q2); 

					}
					break;

				default:
					goto loop6;
				}
			}

			loop6:
				;

			} finally { DebugExitSubRule(6); }


			}

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		}
		finally
		{
			TraceOut("power_expression", 7);
			LeaveRule("power_expression", 7);
			LeaveRule_power_expression();
		}
		DebugLocation(68, 2);
		} finally { DebugExitRule(GrammarFileName, "power_expression"); }
		return ret;

	}
	// $ANTLR end "power_expression"

	partial void EnterRule_negation();
	partial void LeaveRule_negation();
	// $ANTLR start "negation"
	// C:\\workspace\\SharpExpressions\\Lib\\\\Parser\\SharpExpressions.g:70:1: negation returns [Queue ret] : ( '-' Q= atomic_expression | '!' Q= atomic_expression |Q= atomic_expression );
	[GrammarRule("negation")]
	private Queue negation()
	{
		EnterRule_negation();
		EnterRule("negation", 8);
		TraceIn("negation", 8);
		Queue ret = default(Queue);


		Queue Q = default(Queue);

		try { DebugEnterRule(GrammarFileName, "negation");
		DebugLocation(70, 2);
		try
		{
			// C:\\workspace\\SharpExpressions\\Lib\\\\Parser\\SharpExpressions.g:71:3: ( '-' Q= atomic_expression | '!' Q= atomic_expression |Q= atomic_expression )
			int alt7=3;
			try { DebugEnterDecision(7, false);
			switch (input.LA(1))
			{
			case 16:
				{
				alt7 = 1;
				}
				break;
			case 8:
				{
				alt7 = 2;
				}
				break;
			case IDENTIFIER:
			case QUOTED_STRING:
			case REAL:
			case 11:
			case 29:
			case 30:
				{
				alt7 = 3;
				}
				break;
			default:
				{
					NoViableAltException nvae = new NoViableAltException("", 7, 0, input, 1);
					DebugRecognitionException(nvae);
					throw nvae;
				}
			}

			} finally { DebugExitDecision(7); }
			switch (alt7)
			{
			case 1:
				DebugEnterAlt(1);
				// C:\\workspace\\SharpExpressions\\Lib\\\\Parser\\SharpExpressions.g:71:5: '-' Q= atomic_expression
				{
				DebugLocation(71, 5);
				Match(input,16,Follow._16_in_negation396); 
				DebugLocation(71, 10);
				PushFollow(Follow._atomic_expression_in_negation400);
				Q=atomic_expression();
				PopFollow();
